add unit tests for caching and fix old unit tests